--- a/education/PhD.html
+++ b/education/PhD.html
@@ -126,7 +126,7 @@
             </p>
             
             <p>
-                Think of metal fuels as a "better version of a battery" — a compact, high-energy-density energy carrier. The illustration below shows how aluminum, iron and silicon metals compare to batteries and hydrogen in terms of storage space required (based on their volumetric energy density), demonstrating how much smaller the storage space for metals can be for the same energy output.
+                Think of metal fuels as a "better version of a battery" - a compact, high-energy-density energy carrier. The illustration below shows how aluminum, iron and silicon metals compare to batteries and hydrogen in terms of storage space required (based on their volumetric energy density), demonstrating how much smaller the storage space for metals can be for the same energy output.
             </p>
 
             <div class="container">
@@ -259,7 +259,7 @@
                 <div class="col-md">
                     <div class="collapse" id="collapseExample5">
                         <div class="card card-body">
-                            The purpose of metal fuels is to store energy and transport it as an energy carrier. We can think about why do we need a power bank — we first charge it with electricity and then use it to power our devices on demand. Why not use electricity (which charges the power bank) directly? Because we need energy storage!
+                            The purpose of metal fuels is to store energy and transport it as an energy carrier. We can think about why do we need a power bank - we first charge it with electricity and then use it to power our devices on demand. Why not use electricity (which charges the power bank) directly? Because we need energy storage!
                             <br><br>
                             Electricity cannot be stored directly. Hydrogen stores energy chemically, but requires large storage space and poses safety risks such as leakage. Metal fuels can be seen as a 'power bank' - they store energy efficiently and can be easily transported and used as needed.
                         </div>
