--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -55,13 +55,13 @@
                 Engineering students are familiar with the three mechanisms of heat transfer: (i) conduction, (ii) convection, and (iii) radiation. Among these, I enjoy teaching radiation the most. However, I have found that radiation is the topic students struggle with the most or are the least exposed to in heat transfer courses. One possible reason is that radiation is more closely related to physics (students need to understand some mechanisms of light), making it more abstract. I find that many mechanical engineering students can visualize conduction and convection more easily, as these processes involve tangible objects and working fluids and are more closely related to fluid mechanics.
             </p>
             <p>
-                At McGill University, I am fortunate to have had the opportunity to work with two experts in radiation. First, <a href="https://www.linkedin.com/in/melanie-tetreault-friend-p-eng-phd-2b7448109/" target="_blank">Prof. Mélanie Tétreault-Friend</a> – I took a specialized radiation course during my Ph.D. program, where I explored topics such as the radiative properties of real materials, radiation in absorbing/emitting/scattering media, numerical methods for solving radiative transfer equations (Monte Carlo ray tracing method), and real-world applications of radiation in solar collectors and concentrating solar power (CSP) technology. Second, <a href="https://profiles.faculty.utah.edu/u0715614" target="_blank">Prof. Mathieu Francoeur</a> – I collaborated with Prof. Francoeur at the University of Utah on various aspects of radiative heat transfer in metal-fuel combustion as part of my <a href="../education/PhD.html" target="_blank">Ph.D. research</a>. Prof. Francoeur is also an expert in thermophotovoltaic (TPV) cells, and through this collaboration, I have gained valuable exposure to TPV technology — an interdisciplinary collaboration that I highly appreciate.
+                At McGill University, I am fortunate to have had the opportunity to work with two experts in radiation. First, <a href="https://www.linkedin.com/in/melanie-tetreault-friend-p-eng-phd-2b7448109/" target="_blank">Prof. Mélanie Tétreault-Friend</a> – I took a specialized radiation course during my Ph.D. program, where I explored topics such as the radiative properties of real materials, radiation in absorbing/emitting/scattering media, numerical methods for solving radiative transfer equations (Monte Carlo ray tracing method), and real-world applications of radiation in solar collectors and concentrating solar power (CSP) technology. Second, <a href="https://profiles.faculty.utah.edu/u0715614" target="_blank">Prof. Mathieu Francoeur</a> – I collaborated with Prof. Francoeur at the University of Utah on various aspects of radiative heat transfer in metal-fuel combustion as part of my <a href="../education/PhD.html" target="_blank">Ph.D. research</a>. Prof. Francoeur is also an expert in thermophotovoltaic (TPV) cells, and through this collaboration, I have gained valuable exposure to TPV technology &mdash; an interdisciplinary collaboration that I highly appreciate.
             </p>
             <h3>
                 Making Learning Heat Transfer Fun! 
             </h3>
             <p>
-                With my background in radiation, my goal is to make this topic engaging so that students can appreciate its relevance despite its abstract nature. One of my approaches is to connect radiation to observable real-world phenomena. For example, I ask my students: “How can we have a rough idea on how hot is an object by observing its colour?” This concept is explained by Wien’s Displacement Law,  a fundamental concept in heat transfer, which describes how an object’s emitted peak wavelength shifts with temperature - hotter objects emit shorter wavelengths. The YouTube video below demonstrates this concept beautifully:
+                With my background in radiation, my goal is to make this topic engaging so that students can appreciate its relevance despite its abstract nature. One of my approaches is to connect radiation to observable real-world phenomena. For example, I ask my students: “How can we have a rough idea on how hot is an object by observing its colour?” This concept is explained by Wien’s Displacement Law,  a fundamental concept in heat transfer, which describes how an object’s emitted peak wavelength shifts with temperature &mdash; hotter objects emit shorter wavelengths. The YouTube video below demonstrates this concept beautifully:
             </p>
 
             <div class="paragraph image">
@@ -101,7 +101,7 @@
             </div>
 
             <p>
-                Why is a total solar eclipse unique to Earth? The Sun is about 400 times larger in diameter than the Moon, but it is also conincidently about 400 times farther from Earth than the Moon — which means they have almost the same solid angle when viewed from Earth. This perfect alignment allows us to see a total eclipse with a beautifully visible corona, as shown below.
+                Why is a total solar eclipse unique to Earth? The Sun is about 400 times larger in diameter than the Moon, but it is also conincidently about 400 times farther from Earth than the Moon &mdash; which means they have almost the same solid angle when viewed from Earth. This perfect alignment allows us to see a total eclipse with a beautifully visible corona, as shown below.
             </p>
 
             <div class="container">
@@ -118,7 +118,7 @@
             </div>
             
             <p>
-                Even more fascinating is that the Moon is slowly moving away from Earth each year. If we had observed a solar eclipse millions of years ago — or if we do so millions of years in the future — the alignment would not be as perfect, and we would no longer see this beautiful corona. This cosmic coincidence allows us to witness the perfect eclipse phenomenon today. By connecting radiation concepts to real-world and cosmic observations, I believe it will enhance students’ appreciation for heat transfer and make engineering education more meaningful.
+                Even more fascinating is that the Moon is slowly moving away from Earth each year. If we had observed a solar eclipse millions of years ago, or if we do so millions of years in the future, the alignment would not be as perfect, and we would no longer see this beautiful corona. This cosmic coincidence allows us to witness the perfect eclipse phenomenon today. By connecting radiation concepts to real-world and cosmic observations, I believe it will enhance students’ appreciation for heat transfer and make engineering education more meaningful.
             </p>
     
             <p class="enter"></p>
