--- a/education/PhD.html
+++ b/education/PhD.html
@@ -122,11 +122,11 @@
             </p>
             
             <p>
-                My Ph.D. research proposes a relatively new solution - metal fuels. Just as renewable energy (e.g. solar, wind) can be used to split water (H<sub>2</sub>O) into hydrogen (H<sub>2</sub>) and oxygen, we can also use renewable energy to reduce metal oxides (e.g. Al<sub>2</sub>O<sub>3</sub>, Fe<sub>2</sub>O<sub>3</sub>) into metal (Al, Fe) and oxygen! In other words, we are storing solar and wind energy inside the metal in the form of chemical energy. Metals can be transported easily, allowing us to move stored renewable energy around the globe without the need for long transmission lines. This transported metals can then be burned later when needed. That’s why we call metals <b>energy carriers</b>!
+                My Ph.D. research proposes a relatively new solution &mdash; metal fuels. Just as renewable energy (e.g. solar, wind) can be used to split water (H<sub>2</sub>O) into hydrogen (H<sub>2</sub>) and oxygen, we can also use renewable energy to reduce metal oxides (e.g. Al<sub>2</sub>O<sub>3</sub>, Fe<sub>2</sub>O<sub>3</sub>) into metal (Al, Fe) and oxygen! In other words, we are storing solar and wind energy inside the metal in the form of chemical energy. Metals can be transported easily, allowing us to move stored renewable energy around the globe without the need for long transmission lines. This transported metals can then be burned later when needed. That’s why we call metals <b>energy carriers</b>!
             </p>
             
             <p>
-                Think of metal fuels as a "better version of a battery" - a compact, high-energy-density energy carrier. The illustration below shows how aluminum, iron and silicon metals compare to batteries and hydrogen in terms of storage space required (based on their volumetric energy density), demonstrating how much smaller the storage space for metals can be for the same energy output.
+                Think of metal fuels as a "better version of a battery" &mdash; a compact, high-energy-density energy carrier. The illustration below shows how aluminum, iron and silicon metals compare to batteries and hydrogen in terms of storage space required (based on their volumetric energy density), demonstrating how much smaller the storage space for metals can be for the same energy output.
             </p>
 
             <div class="container">
