--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -138,9 +138,9 @@
         <p>
             While active learning is highly effective, it also comes with challenges:
             <ul>
-                <li>Time Constraints – Active learning takes more time, which may reduce the amount of material covered in a class session.</li>
-                <li>Student Preferences – Some students, especially those who prefer working alone, may struggle with group-based active learning strategies.</li>
-                <li>Classroom Management – In large classes, active learning can be difficult due to space limitations and challenges in monitoring engagement.</li>
+                <li>Time Constraints &mdash; Active learning takes more time, which may reduce the amount of material covered in a class session.</li>
+                <li>Student Preferences &mdash; Some students, especially those who prefer working alone, may struggle with group-based active learning strategies.</li>
+                <li>Classroom Management &mdash; In large classes, active learning can be difficult due to space limitations and challenges in monitoring engagement.</li>
             </ul>
         </p>
         <p>
