--- a/travel/layout.html
+++ b/travel/layout.html
@@ -41,6 +41,9 @@
                 </ul>
                 <b class="unclickable">Travel Blogs:</b>
                 <ul class="nobull">
+                    <li><i class="flag-icon flag-icon-tr"></i><a class="whitelink" href="../travel/Turkey.html"> 2024: Turkey</a></li>
+                    <li><i class="flag-icon flag-icon-pt"></i><a class="whitelink" href="../travel/Portugal.html"> 2023: Portugal</a></li>
+                    <li><i class="flag-icon flag-icon-gr"></i><a class="whitelink" href="../travel/Greece.html"> 2022: Greece</a></li>
                     <li><i class="flag-icon flag-icon-mx"></i><a class="whitelink" href="../travel/Mexico.html"> 2020: Mexico</a></li>
                     <li><i class="flag-icon flag-icon-fr"></i><a class="whitelink" href="../travel/France.html"> 2019: France</a></li>
                     <li><i class="flag-icon flag-icon-gb"></i><a class="whitelink" href="../travel/England.html"> 2019: England</a></li>
@@ -73,6 +76,9 @@
                         </ul>
                         <b class="unclickable">Travel Blogs:</b>
                         <ul class="nobull">
+                            <li><i class="flag-icon flag-icon-tr"></i><a class="whitelink" href="../travel/Turkey.html"> 2024: Turkey</a></li>
+                            <li><i class="flag-icon flag-icon-pt"></i><a class="whitelink" href="../travel/Portugal.html"> 2023: Portugal</a></li>
+                            <li><i class="flag-icon flag-icon-gr"></i><a class="whitelink" href="../travel/Greece.html"> 2022: Greece</a></li>
                             <li><i class="flag-icon flag-icon-mx"></i><a class="whitelink" href="../travel/Mexico.html"> 2020: Mexico</a></li>
                             <li><i class="flag-icon flag-icon-fr"></i><a class="whitelink" href="../travel/France.html"> 2019: France</a></li>
                             <li><i class="flag-icon flag-icon-gb"></i><a class="whitelink" href="../travel/England.html"> 2019: England</a></li>
