--- a/travel/Poland.html
+++ b/travel/Poland.html
@@ -130,6 +130,15 @@
                 </div>
             </div>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="../travel/image/poland14.jpg" width=100%>
+                        <label>Two million participants attended the event from at least 50 countries</label>
+                    </div>
+                </div>
+            </div>
+
             <p class="enter"></p>
 
         </main>
