--- a/travel/Greece.html
+++ b/travel/Greece.html
@@ -50,11 +50,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="../travel/image/greece1.jpg" width=100% height="100%">
+                        <img src="../travel/image/greece1.jpg" width=100%>
                         <label>Attending a social event in the COSPAR conference</label>
                     </div>
                     <div class="col-md-8">
-                        <img src="../travel/image/greece2.jpg" width=100% height="100%">
+                        <img src="../travel/image/greece2.jpg" width=100%>
                         <label>Experiencing my first scuba dive in the Mediterranean Sea</label>
                     </div>
                 </div>
