--- a/travel/Portugal.html
+++ b/travel/Portugal.html
@@ -50,11 +50,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="../travel/image/portugal1.jpg" width=100%>
+                        <img src="../travel/image/portugal1.jpg" width=100% height="75">
                         <label>The Domasik family has hosted me and my friends for a week</label>
                     </div>
                     <div class="col-md-6">
-                        <img src="../travel/image/portugal2.jpg" width=100%>
+                        <img src="../travel/image/portugal2.jpg" width=100% height="75">
                         <label>More than two million participants worldwide</label>
                     </div>
                 </div>
