--- a/travel/Poland.html
+++ b/travel/Poland.html
@@ -134,7 +134,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <img src="../travel/image/poland14.jpg" width=100%>
-                        <label>Two million participants attended the event from at least 50 countries</label>
+                        <label>More than two million participants attended the event from at least 50 countries</label>
                     </div>
                 </div>
             </div>
