--- a/travel/summary.html
+++ b/travel/summary.html
@@ -78,19 +78,19 @@
                             <div class="mySlides fade">
                                 <div class="numbertext">6 / 8</div>
                                 <img src="../travel/image/TurkeyBosphorus.jpg" style="width:100%">
-                                <div class="text">The Bosphorus Strait in Istanbul, Turkey, separating the European and Asian continents.</div>
+                                <div class="text">The Bosphorus Strait in Istanbul, Turkey, separating the European and Asian continents</div>
                             </div>
 
                             <div class="mySlides fade">
                                 <div class="numbertext">7 / 8</div>
                                 <img src="../travel/image/GreeceSunset.jpg" style="width:100%">
-                                <div class="text">A Beautiful Sunset in Santorini Island, Greece.</div>
+                                <div class="text">A Beautiful Sunset in Santorini Island, Greece</div>
                             </div>
 
                             <div class="mySlides fade">
                                 <div class="numbertext">8 / 8</div>
                                 <img src="../travel/image/SwitzerlandMatterhorn.png" style="width:100%">
-                                <div class="text">Adventure at the Matterhorn Glacier Paradise, Switzerland, the highest mountain station in Europe.</div>
+                                <div class="text">Adventure at the Matterhorn Glacier Paradise, Switzerland, the highest mountain station in Europe</div>
                             </div>
                         </div>
                                     
