--- a/travel/Turkey.html
+++ b/travel/Turkey.html
@@ -44,17 +44,17 @@
             </h6> 
 
             <p>
-                I’m happy to experience a new country -- Turkey -- and immerse myself in a culture filled with wonderful people and warm hospitality.
+                I’m happy to experience a new country &mdash; Turkey &mdash; and immerse myself in a culture filled with wonderful people and warm hospitality.
             </p>
 
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="../travel/image/turkey1.jpg" width=100% height="75">
+                        <img src="../travel/image/turkey1.jpg" width=100% height="75%">
                         <label>Visiting Hagia Sophia</label>
                     </div>
                     <div class="col-md-9">
-                        <img src="../travel/image/turkey2.jpg" width=100% height="75">
+                        <img src="../travel/image/turkey2.jpg" width=100% height="75%">
                         <label>Visiting Topkapi Palace Museum</label>
                     </div>
                 </div>
