--- a/travel/Portugal.html
+++ b/travel/Portugal.html
@@ -60,15 +60,15 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="../travel/image/portugal3.jpg" width=100% height="75">
+                        <img src="../travel/image/portugal3.jpg" width=100% height="75%">
                         <label>Making a new Canadian friend</label>
                     </div>
                     <div class="col-md-4">
-                        <img src="../travel/image/portugal4.jpg" width=100% height="75">
+                        <img src="../travel/image/portugal4.jpg" width=100% height="75%">
                         <label>Reunion with Don Giuliano and Carlo</label>
                     </div>
                     <div class="col-md-4">
-                        <img src="../travel/image/portugal5.jpg" width=100% height="75">
+                        <img src="../travel/image/portugal5.jpg" width=100% height="75%">
                         <label>Reunion with Hugo</label>
                     </div>
                 </div>
