--- a/travel/Italy.html
+++ b/travel/Italy.html
@@ -76,7 +76,7 @@
             <p>
                 After this camp, I was invited to Carlo's family in Piove di Sacco to stay for a week where I learned a lot about the Italian culture. I visited Venice with his family members, and Don Giuliano also invited me to visit his church and some local attractions nearby. What touched my heart the most was that Don Giuliano's team collaborated with Don Paolo Zaramella, a priest in Padua, to organize a new year's party in Padua for refugees. I was also invited to join the refugees and his team in this lovely new year's celebration. Having a new year's party with the Italian community and those refugees, whose cultures are different than mine, made me recall my lovely time in Malaysia, where I also organized <a href="../volunteer/cny.html">Chinese New Year dinner</a> that involved other cultural groups.  
             <p>
-                After visiting Carlo and Don Giuliano, I also took the opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome, before I departed to Canada to begin the new chapter of my life. 
+                After visiting Carlo and Don Giuliano, I also took the opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy &mdash; Rome, before I departed to Canada to begin the new chapter of my life. 
             </p>
 
             <div class="container">
