--- a/travel/Brazil.html
+++ b/travel/Brazil.html
@@ -61,7 +61,7 @@
             </div>
 
             
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col-md-3">
                         <img src="../travel/image/brazil2.jpg" width=100% height="80%">
@@ -77,7 +77,7 @@
                         </label>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <p style="margin-top: 0px;">
                 Another city that I visited is Rio de Janeiro, the city that hosted the World Youth Day in 2013 and the Olympic Games in 2016. My trip to Rio was fortunately hosted by Renato Vasconcellos, a new Brazilian friend of mine, for a few nights. We shared our stories and cultures together, and I also had opportunities to visit a lot of local attractions in this city, including the statue of Christ the Redeemer, which is one of the seven wonders of the world. 
