--- a/travel/layout.html
+++ b/travel/layout.html
@@ -39,7 +39,7 @@
                 <ul class="nobull">
                     <li><a class="whitelink" href="../travel/summary.html"> Why Do I Travel? </a></li>
                 </ul>
-                <b class="unclickable">Travel Blogs:</b>
+                <b class="unclickable">My Travel Blogs:</b>
                 <ul class="nobull">
                     <li><i class="flag-icon flag-icon-tr"></i><a class="whitelink" href="../travel/Turkey.html"> 2024: Turkey</a></li>
                     <li><i class="flag-icon flag-icon-pt"></i><a class="whitelink" href="../travel/Portugal.html"> 2023: Portugal</a></li>
@@ -74,7 +74,7 @@
                         <ul class="nobull">
                             <li><a class="whitelink" href="../travel/summary.html"> Why Do I Travel? </a></li>
                         </ul>
-                        <b class="unclickable">Travel Blogs:</b>
+                        <b class="unclickable">My Travel Blogs:</b>
                         <ul class="nobull">
                             <li><i class="flag-icon flag-icon-tr"></i><a class="whitelink" href="../travel/Turkey.html"> 2024: Turkey</a></li>
                             <li><i class="flag-icon flag-icon-pt"></i><a class="whitelink" href="../travel/Portugal.html"> 2023: Portugal</a></li>
