--- a/travel/Portugal.html
+++ b/travel/Portugal.html
@@ -51,7 +51,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img src="../travel/image/portugal1.jpg" width=100%>
-                        <label>The Domasik family has hosted me and my friends for a week</label>
+                        <label>Attending the final closing ceremony</label>
                     </div>
                     <div class="col-md-6">
                         <img src="../travel/image/portugal2.jpg" width=100%>
