--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -59,10 +59,10 @@
         </p>
         <p>
             <ul style="list-style-type: none; padding: 0; margin: 0;">
-                <li>&#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g., P.Eng.).</li>
-                <li>&#10004; Equipped with technical, ethical, and professional skills required for real-world applications.</li>
-                <li>&#10004; Meeting high-quality professional standards in engineering education.</li>
-                <li>&#10004; Benefiting from global recognition and licensure mobility.</li>
+                &nbsp; <li>&#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g., P.Eng.).</li>
+                &nbsp; <li>&#10004; Equipped with technical, ethical, and professional skills required for real-world applications.</li>
+                &nbsp; <li>&#10004; Meeting high-quality professional standards in engineering education.</li>
+                &nbsp; <li>&#10004; Benefiting from global recognition and licensure mobility.</li>
             </ul>
         </p>
 
