--- a/travel/Turkey.html
+++ b/travel/Turkey.html
@@ -44,7 +44,7 @@
             </h6> 
 
             <p>
-                I’m happy to experience a new country &mdash; Turkey &mdash; and immerse myself in a culture filled with wonderful people and warm hospitality.
+                It is great to have the opportunity to experience a new country &mdash; Turkey &mdash; and immerse myself in a culture filled with wonderful people and warm hospitality.
             </p>
 
             <div class="container">
