--- a/travel/Portugal.html
+++ b/travel/Portugal.html
@@ -65,11 +65,11 @@
                     </div>
                     <div class="col-md-4">
                         <img src="../travel/image/portugal4.jpg" width=100% height="90%">
-                        <label>Reunion with Don Giuliano and Carlo</label>
+                        <label>Reunion with Don Giuliano and Carlo (Italy)</label>
                     </div>
                     <div class="col-md-4">
                         <img src="../travel/image/portugal5.jpg" width=100% height="90%">
-                        <label>Reunion with Hugo</label>
+                        <label>Reunion with Hugo (Mexico) </label>
                     </div>
                 </div>
                 <div class="row">
