--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -57,10 +57,10 @@
         <p>
             In Canada, every accredited engineering program of all institutions aligns with the CEAB Graduate Attributes framework, which defines 12 essential competencies for engineering graduates. These attributes ensure that graduates are:
             <ul style="list-style-type: none; padding: 0; margin: 0;">
-                <li>&#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g., P.Eng.).</li>
-                <li>&#10004; Equipped with technical, ethical, and professional skills required for real-world applications.</li>
-                <li>&#10004; Meeting high-quality professional standards in engineering education.</li>
-                <li>&#10004; Benefiting from global recognition and licensure mobility.</li>
+                <li>Competent, well-rounded, and prepared for professional engineering licensing path (e.g., P.Eng.).</li>
+                <li>Equipped with technical, ethical, and professional skills required for real-world applications.</li>
+                <li>Meeting high-quality professional standards in engineering education.</li>
+                <li>Benefiting from global recognition and licensure mobility.</li>
             </ul>
         </p>
 
@@ -90,9 +90,9 @@
         <p>
             Why is Bloom’s Taxonomy Important?
             <ul style="list-style-type: none; padding: 0; margin: 0;">
-                <li>&#10004; Helps educators structure curriculum development by covering a range of cognitive skills.</li>
-                <li>&#10004; Ensures that assessments go beyond memorization and test higher-order thinking.</li>
-                <li>&#10004; Encourages active learning strategies that push students toward deeper engagement and understanding.</li>
+                <li>Helps educators structure curriculum development by covering a range of cognitive skills.</li>
+                <li>Ensures that assessments go beyond memorization and test higher-order thinking.</li>
+                <li>Encourages active learning strategies that push students toward deeper engagement and understanding.</li>
             </ul>
         </p>
 
