--- a/education/award.html
+++ b/education/award.html
@@ -51,6 +51,12 @@
                         <th>Access the Cert</th>
                     </tr>
                     <tr>
+                        <td>May 2025</td>
+                        <td>Outstanding Teaching Assistant Award</td>
+                        <td>The Combustion Institute</td>
+                        <td>N.A.</a></td>
+                    </tr>
+                    <tr>
                         <td>Feb 2025</td>
                         <td>Distinguished Paper Award for the 40th International Symposium of Combustion</td>
                         <td>The Combustion Institute</td>
