--- a/education/award.html
+++ b/education/award.html
@@ -53,7 +53,7 @@
                     <tr>
                         <td>May 2025</td>
                         <td>Outstanding Teaching Assistant Award</td>
-                        <td>The Combustion Institute</td>
+                        <td>Faculty of Engineering, McGill University</td>
                         <td>N.A.</a></td>
                     </tr>
                     <tr>
