--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -42,7 +42,7 @@
             <hr>
 
             <p>
-                I have extensive teaching experience across various educational levels, from high school to university, in both online/remote and in-person settings, and in small and large classroom environments. In 2025, I received Outstanding Teaching Assistant Award from the Faculty of Engineering, McGill University. 
+                I have extensive teaching experience across various educational levels—from high school to university—in both online/remote and in-person settings, as well as in small and large classroom environments. In 2025, I was honored to receive the Outstanding Teaching Assistant Award from the Faculty of Engineering at McGill University.
             </p> 
 
             <p>
