--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -33,7 +33,7 @@
         </div>
         <hr style="margin-bottom: 5px;">
 
-        <div class="big-screen">
+        <!-- <div class="big-screen">
             <div class="aside-content">
                 <b class="unclickable">Content:</b>
                 <ul class="nobull">
@@ -60,8 +60,8 @@
                 </nav>
                 <div class="collapse" id="navbarToggleExternalContent">
                     <div class="aside-content">
-                        <ul class="nobull">
-                            <!-- <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li> -->
+                        <ul class="nobull"> 
+                            <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li>
                             <li><a class="whitelink" href="../teaching/experience.html"> Teaching Experience</a></li>
                             <li><a class="whitelink" href="../teaching/heattransfer.html"> Heat Transfer</a></li>
                             <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
@@ -76,4 +76,4 @@
 
     </div>
 </body>
-</html>
+</html>  -->
