--- a/education/PhD.html
+++ b/education/PhD.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -338,7 +338,7 @@
         </div>
         </div>
     </body>
-</html> -->
+</html>
 
 
 
