--- a/education/publication.html
+++ b/education/publication.html
@@ -57,7 +57,9 @@
             </h3>
             <p>
                 <ul>
-                    <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin, J. Bergthorson (2024). Stabilization of silicon Bunsen flames on a laminar dust burner, <a href="https://www.tu-darmstadt.de/clean-circles/transfer_outreach_cc/mecre_2024/index.en.jsp" target="_blank">2nd Metal-enabled Cycle of Renewable Energy (MeCRE)</a>, 
+                    <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin, J. Bergthorson (2024). Investigation of silicon Bunsen dust flames and silicon single particle combustion, <a href="https://www.mcs2025.com/" target="_blank">13th Mediterranean Combustion Symposium</a>, 
+                        June 1-5, 2024, Corfu, Greece. </li>
+                        <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin, J. Bergthorson (2024). Stabilization of silicon Bunsen flames on a laminar dust burner, <a href="https://www.tu-darmstadt.de/clean-circles/transfer_outreach_cc/mecre_2024/index.en.jsp" target="_blank">2nd Metal-enabled Cycle of Renewable Energy (MeCRE)</a>, 
                         November 13-15, 2024, Darmstadt, Germany. </li>
                     <li>H. Heng, J. Palečka, S. Goroshin, J. Bergthorson (2024). Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments, <a href="https://combustioninstitute.org/about_the_international_sympos.php" target="_blank">40th International Symposium of Combustion - Emphasizing Energy Transition</a>, 
                         July 21-26, 2024, Milan, Italy. </li>
