--- a/education/layout.html
+++ b/education/layout.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
 <head>
     <div id="title">
         <title>Cloud: Research & Education</title>   
@@ -78,4 +78,4 @@
         <hr>
     </div>
 </body>
-</html> -->
+</html>
