--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -157,5 +157,3 @@
     </div>
     </body>
 </html>
-
-         -->
