--- a/professional/summary.html
+++ b/professional/summary.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!-- 
+<!DOCTYPE html> 
 <html lang="en">
     <head>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -148,8 +147,8 @@
         <div class="paragraph big-screen">
             <span class="a">Programming</span>: &emsp; C, Python, SQL, MATLAB, MS Excel (Advanced)<br>
             <span class="a">Plotting Tools</span>: &emsp; OriginLab, Tecplot -->
-            <!-- <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs</span> --> <br>
-            <!-- <span class="a">Word Processor</span>: &emsp; LaTex - <span style="font-size: smaller;">read my <a href="https://harvest.usask.ca/handle/10388/12492", target="blank">M.Sc. thesis</a> for a sample LaTex document</span><br>
+            <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs</span> --> <br>
+            <span class="a">Word Processor</span>: &emsp; LaTex - <span style="font-size: smaller;">read my <a href="https://harvest.usask.ca/handle/10388/12492", target="blank">M.Sc. thesis</a> for a sample LaTex document</span><br>
             <span class="a">Project Management</span>: &emsp; Primavera, MS Project <br>
             <span class="a">Computer-Aided Design</span>: &emsp; SolidWorks, AutoCAD <br>
         </div>
