--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
 <head>
     <div id="title">
        
@@ -22,18 +22,18 @@
             <div>  
                 <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:cloud.heng@mail.mcgill.ca"> cloud.heng@mail.mcgill.ca </a>
             </div>
-            <div> -->
+            <div>
                 <!-- <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="../icon/facebook.png" class="social-media"></a> -->
-                <!-- <a href="https://www.linkedin.com/in/cloud-herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="../icon/linkedin.png" class="social-media"></a> -->
+                <a href="https://www.linkedin.com/in/cloud-herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="../icon/linkedin.png" class="social-media"></a> -->
                 <!-- <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="../icon/instagram.png" class="social-media"></a> -->
-                <!-- <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="../icon/GS2.png" class="social-media"></a>
+                <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="../icon/GS2.png" class="social-media"></a>
                 <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="../icon/skype.jpg" class="social-media"></a> -->
                 <!-- <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="../icon/CS.png" class="social-media"></a>    -->
-            <!-- </div>
+            </div>
         </div>
-        <hr style="margin-bottom: 5px;"> -->
+        <hr style="margin-bottom: 5px;">
 
-        <!-- <div class="big-screen">
+        <div class="big-screen">
             <div class="aside-content">
                 <b class="unclickable">Content:</b>
                 <ul class="nobull">
@@ -76,4 +76,4 @@
 
     </div>
 </body>
-</html>  -->
+</html> 
