--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -129,15 +129,3 @@
     </body>
 </html>
 
-
-
-
-
-        
-
-
-
-
-
-
- -->
