--- a/education/layout.html
+++ b/education/layout.html
@@ -62,7 +62,7 @@
                 <div class="collapse" id="navbarToggleExternalContent">
                     <div class="aside-content">
                         <ul class="nobull">
-                            <<li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li>
+                            <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li>
                             <li><a class="whitelink" href="PhD.html"> My Novel Ph.D. Research</a></li>
                             <li><a class="whitelink" href="MSc.html"> Master's Degree in Mech. Eng.</a></li>
                             <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>  
