--- a/education/layout.html
+++ b/education/layout.html
@@ -23,10 +23,10 @@
             </div>
             <div>
                 <!-- <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="../icon/facebook.png" class="social-media"></a> -->
-                <a href="https://www.linkedin.com/in/cloud-herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="../icon/linkedin.png" class="social-media"></a> -->
+                <a href="https://www.linkedin.com/in/cloud-herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="../icon/linkedin.png" class="social-media"></a>
                 <!-- <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="../icon/instagram.png" class="social-media"></a> -->
-                <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="../icon/GS2.png" class="social-media"></a> -->
-                <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="../icon/skype.jpg" class="social-media"></a> -->
+                <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="../icon/GS2.png" class="social-media"></a> 
+                <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="../icon/skype.jpg" class="social-media"></a> 
                 <!-- <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="../icon/CS.png" class="social-media"></a>    -->
             </div>
         </div>
