--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -92,7 +92,7 @@
                 
             </p>
 
-            <h3>
+            <!-- <h3>
                 My Teaching Evaluation 
             </h3>
             <hr>
@@ -104,7 +104,7 @@
                     Open in new window <i class="fa">&#xf08e;</i>
                 </a>
                 <embed src="../pdf/Combined Evaluation Report.pdf" width="100%" height="600">
-            </div>
+            </div> -->
             
             <p class="enter"></p>
 
