--- a/education/BSc.html
+++ b/education/BSc.html
@@ -43,7 +43,7 @@
                 Awarded By: <a href="https://www.usask.ca/">Universiti Tenaga Nasional<a>
             </h6> 
  
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                 <div class="col-md">
                     <button style="text-align: center;" class="btn btn-block accordion_butt" type="button" data-toggle="collapse" 
@@ -61,7 +61,7 @@
                         </div>      
                     </div>
                 </div>
-            </div>      
+            </div>       -->
             </div>
             </div>
 
